--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 </head>
 
 <body class="font-manrope">
+    <!-- banner  -->
     <div class="hero ">
-        <div class="hero-content flex lg:flex-row-reverse">
+        <div class="hero-content flex flex-col-reverse lg:flex-row-reverse">
             <div class="flex-1 relative">
                 <img src="images/banner.png" class=" rounded-lg " />
                 <div class="flex gap-3 shadow-xl p-5 pr-0 rounded-lg w-60 absolute bg-white left-20 bottom-5">
@@ -45,13 +46,62 @@
                 </div>
             </div>
             <div class="flex-1">
-                <h1 class="text-7xl font-extrabold pr-10">It's good
+                <h1 class="text-5xl lg:text-7xl font-extrabold lg:pr-10">It's good
                     tea time at The Tea House</h1>
-                <p class="py-6 text-lg font-medium text-ash-color pr-32">
+                <p class="py-6 text-lg font-medium text-ash-color lg:pr-32">
                     Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                 </p>
                 <button class="btn text-white bg-gradient-to-r from-[#FF0000] to-[#FF8938]">Explore More <img
                         src="images/arrow.png" alt=""></button>
+            </div>
+        </div>
+    </div>
+    <!-- feature product  -->
+    <div class="max-w-6xl mx-auto text-center my-24 px-2">
+        <h3 class="text-5xl font-extrabold mb-8 ">Our Featured Products</h3>
+        <p class="text-base font-semibold text-ash-color mb-8">There are many variations of passages of Lorem Ipsum
+            available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+            which don't look even slightly believable. </p>
+        <div class="flex flex-col lg:flex-row gap-6">
+            <div class="card bg-gradient-to-b from-[#F4F4F4]  ">
+                <figure class="px-10 pt-10">
+                    <img src="images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                    <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                    <p class="text-base font-semibold text-ash-color">Creamer could be replaced by fresh milk</p>
+
+                </div>
+            </div>
+            <div class="card bg-gradient-to-b from-[#F4F4F4]  ">
+                <figure class="px-10 pt-10">
+                    <img src="images/tea-2.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                    <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                    <p class="text-base font-semibold text-ash-color">Creamer could be replaced by fresh milk</p>
+
+                </div>
+            </div>
+            <div class="card bg-gradient-to-b from-[#F4F4F4]  ">
+                <figure class="px-10 pt-10">
+                    <img src="images/tea-3.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                    <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                    <p class="text-base font-semibold text-ash-color">Creamer could be replaced by fresh milk</p>
+
+                </div>
+            </div>
+            <div class="card bg-gradient-to-b from-[#F4F4F4]  ">
+                <figure class="px-10 pt-10">
+                    <img src="images/tea-4.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                    <h2 class="card-title text-2xl font-extrabold">Milk Tea</h2>
+                    <p class="text-base font-semibold text-ash-color">Creamer could be replaced by fresh milk</p>
+
+                </div>
             </div>
         </div>
     </div>
