--- a/index.html
+++ b/index.html
@@ -105,6 +105,40 @@
             </div>
         </div>
     </div>
+    <!-- tea grid  -->
+    <div class="hero">
+        <div class="hero-content flex-col lg:flex-row gap-12">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+                <div class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] h-36 rounded-lg">
+                    <!-- gradient  -->
+                </div>
+                <div class="bg-[#e6a5231e] row-span-2 py-6 rounded-lg">
+                    <img class="" src="images/fresh-1.png" alt="">
+                </div>
+                <div class="bg-[#5876391e]  row-span-2 p-6 rounded-lg">
+                    <img class="" src="images/fresh-2.png" alt="">
+                </div>
+                <div class="bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] h-36 rounded-lg">
+                    <!-- gradient  -->
+                </div>
+            </div>
+            <div class="max-w-[580px]">
+                <h1 class="text-5xl font-bold">Great Tea, Freshly Presented</h1>
+                <p class="py-6 text-base font-semibold text-ash-color">
+                    The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.
+                </p>
+                <h3 class="font-extrabold text-5">Unique Taste</h3>
+                <p class="py-6 text-base font-semibold text-ash-color">A Unique and different style from other teapots
+                    gives a luxurious and minimalist impression</p>
+                <h3 class="font-extrabold text-5">Premium Quality</h3>
+                <p class="py-6 text-base font-semibold text-ash-color">A Unique and different style from other teapots
+                    gives a luxurious and minimalist impression</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
