--- a/index.html
+++ b/index.html
@@ -139,6 +139,60 @@
             </div>
         </div>
     </div>
+    <!-- customer review  -->
+    <div class="hero rounded-xl px-12 py-24 my-24 bg-gradient-to-r from-[#FF0000] to-[#FF8938] max-w-6xl mx-auto ">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+            <!-- review cards  -->
+            <div class="flex-1 ">
+                <!-- next review  -->
+                <div class="bg-white rounded-lg px-8 py-10 relative max-w-[430px]">
+                    <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p class=" text-base font-semibold text-ash-color mb-8">We are providing the best and suitable home
+                        insurance services for the people who are interested to treatment</p>
+                    <h4>Ilham Yuda</h4>
+                    <p>Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--current review  -->
+                <div class="bg-white rounded-lg px-8 py-10 absolute max-w-[430px]">
+                    <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p class=" text-base font-semibold text-ash-color mb-8">We are providing the best and suitable home
+                        insurance services for the people who are interested to treatment</p>
+                    <h4>Ilham Yuda</h4>
+                    <p>Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- previous review  -->
+                <div class="bg-white rounded-lg px-8 py-10 relative max-w-[430px]">
+                    <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
+                        src="images/client.png" alt="">
+                    <p class=" text-base font-semibold text-ash-color mb-8">We are providing the best and suitable home
+                        insurance services for the people who are interested to treatment</p>
+                    <h4>Ilham Yuda</h4>
+                    <p>Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- review content  -->
+            <div class="flex-1 ">
+                <h1 class="text-5xl font-bold text-white"> Meet Our Super Clients</h1>
+                <p class="py-6 text-white">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable.
+                </p>
+                <button class="btn bg-white text-orange-400"> Show All</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
