--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
         </div>
     </div>
     <!-- customer review  -->
-    <div class="hero rounded-xl px-12 py-24 my-24 bg-gradient-to-r from-[#FF0000] to-[#FF8938] max-w-6xl mx-auto ">
-        <div class="hero-content flex-col lg:flex-row-reverse">
+    <div class="hero rounded-xl px-12 py-16 my-24 bg-gradient-to-r from-[#FF0000] to-[#FF8938] max-w-6xl mx-auto ">
+        <div class="hero-content flex-col lg:flex-row-reverse gap-12">
             <!-- review cards  -->
-            <div class="flex-1 ">
+            <div class="flex-1 relative pl-24 flex flex-col gap-10">
                 <!-- next review  -->
-                <div class="bg-white rounded-lg px-8 py-10 relative max-w-[430px]">
+                <div class="bg-white rounded-lg px-8 py-10 relative max-w-[430px] z-0 opacity-40">
                     <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p class=" text-base font-semibold text-ash-color mb-8">We are providing the best and suitable home
@@ -157,7 +157,8 @@
                     </div>
                 </div>
                 <!--current review  -->
-                <div class="bg-white rounded-lg px-8 py-10 absolute max-w-[430px]">
+                <div class="bg-white rounded-lg px-8 py-10 absolute top-36 -left-5 z-10
+                 max-w-[430px]">
                     <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p class=" text-base font-semibold text-ash-color mb-8">We are providing the best and suitable home
@@ -169,7 +170,7 @@
                     </div>
                 </div>
                 <!-- previous review  -->
-                <div class="bg-white rounded-lg px-8 py-10 relative max-w-[430px]">
+                <div class="bg-white rounded-lg px-8 py-10 relative max-w-[430px] z-0 opacity-40">
                     <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p class=" text-base font-semibold text-ash-color mb-8">We are providing the best and suitable home
