--- a/index.html
+++ b/index.html
@@ -194,6 +194,95 @@
             </div>
         </div>
     </div>
+    <!-- events  -->
+    <div class="text-center max-w-6xl mx-auto mb-24">
+        <h3 class="text-5xl font-bold">News & Events</h3>
+        <p class="py-6 text-base font-semibold text-ash-color">There are many variations of passages of Lorem Ipsum
+            available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <div class="flex lg:flex-row flex-col gap-5">
+            <div class="card bg-base-100 border border-slate-200 pt-5 text-left">
+                <figure>
+                    <img src="images/news-1.png" alt="Shoes" />
+                </figure>
+                <div class="card-body">
+                    <p class=" text-base font-semibold text-ash-color">Feb 05, 2027</p>
+                    <h2 class="card-title font-extrabold text-2xl">Collecting 8 points for discount</h2>
+                    <p class="mb-4 text-base font-semibold text-ash-color">There are many variations of passages of
+                        Lorem Ipsum available.</p>
+                    <h5 class="font-bold">Learn More</h5>
+                </div>
+            </div>
+            <div class="card bg-base-100  border border-slate-200 pt-5 text-left">
+                <figure>
+                    <img src="images/news-2.png" alt="Shoes" />
+                </figure>
+                <div class="card-body">
+                    <p class=" text-base font-semibold text-ash-color">Feb 05, 2027</p>
+                    <h2 class="card-title font-extrabold text-2xl">Collecting 8 points for discount</h2>
+                    <p class="mb-4 text-base font-semibold text-ash-color">There are many variations of passages of
+                        Lorem Ipsum available.</p>
+                    <h5 class="font-bold">Learn More</h5>
+                </div>
+            </div>
+            <div class="card bg-base-100  border border-slate-200 pt-5 text-left">
+                <figure>
+                    <img src="images/news-3.png" alt="Shoes" />
+                </figure>
+                <div class="card-body">
+                    <p class=" text-base font-semibold text-ash-color">Feb 05, 2027</p>
+                    <h2 class="card-title font-extrabold text-2xl">Collecting 8 points for discount</h2>
+                    <p class="mb-4 text-base font-semibold text-ash-color">There are many variations of passages of
+                        Lorem Ipsum available.</p>
+                    <h5 class="font-bold">Learn More</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer  -->
+    <div>
+        <footer class="footer bg-gradient-to-r from-[#ff000014] to-[#ff88384f] text-base-content px-48 py-36">
+            <nav>
+                <h6 class="footer-title">Quick Links</h6>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Insurance</a>
+                <a class="link link-hover">Privacy Policy</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Company</h6>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Legal</h6>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+
+            </nav>
+            <form>
+
+                <h6 class="footer-title">Subscribe to our newsletter</h6>
+                <div class="flex">
+                    <div>
+                        <fieldset class="form-control w-80">
+                            <label class="label">
+                                <span class="label-text">Enter your email address</span>
+                            </label>
+                            <input type="email" name="" id="" class="border-b-2  border-ash-color bg-transparent">
+                        </fieldset>
+                    </div>
+                    <div>
+                        <button>
+                            <img class="text-white bg-transparent" src="images/icons8-right-arrow-32.png" alt="">
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </footer>
+    </div>
 </body>
 
 </html>
