--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Project</title>
+    <!-- tailwind and daisy ui  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <!-- font  -->
+    <!--custom font  -->
     <style>
         .font-manrope {
             font-family: "Manrope", sans-serif;
@@ -29,6 +31,8 @@
             }
         }
     </script>
+    <!-- favicon  -->
+    <script src="https://kit.fontawesome.com/78f2740b36.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="font-manrope">
@@ -240,31 +244,41 @@
         </div>
     </div>
     <!-- footer  -->
-    <div>
-        <footer class="footer bg-gradient-to-r from-[#ff000014] to-[#ff88384f] text-base-content px-48 py-36">
-            <nav>
-                <h6 class="footer-title">Quick Links</h6>
+    <div class="bg-gradient-to-r from-[#ff000014] to-[#ff88384f]   px-48 py-20 grid grid-rows-3">
+        <div class="flex justify-between items-center max-w-6xl mb-12">
+            <div class="">
+                <img class="" src="images/cup.png" alt="">
+            </div>
+            <div class="flex gap-12 items-center">
+                <p class="text-2xl">Ready to get strated?</p>
+                <button class=" btn font-bold text-xl bg-gradient-to-r from-[#FF0000] to-[#FF8938] text-white">Get
+                    Started</button>
+            </div>
+        </div>
+        <footer class=" grid lg:grid-cols-4  ">
+            <nav class="grid grid-rows-5 gap-3">
+                <h6 class=" text-2xl font-semibold ">Quick Links</h6>
                 <a class="link link-hover">Home</a>
                 <a class="link link-hover">About Us</a>
                 <a class="link link-hover">Insurance</a>
                 <a class="link link-hover">Privacy Policy</a>
             </nav>
-            <nav>
-                <h6 class="footer-title">Company</h6>
+            <nav class="grid grid-rows-5">
+                <h6 class="text-2xl font-semibold  ">Company</h6>
                 <a class="link link-hover">About us</a>
                 <a class="link link-hover">Jobs</a>
                 <a class="link link-hover">Press kit</a>
                 <a class="link link-hover">Press kit</a>
             </nav>
-            <nav>
-                <h6 class="footer-title">Legal</h6>
+            <nav class="grid grid-rows-3 gap-0">
+                <h6 class="text-2xl font-semibold ">Legal</h6>
                 <a class="link link-hover">Terms of use</a>
                 <a class="link link-hover">Privacy policy</a>
 
             </nav>
             <form>
 
-                <h6 class="footer-title">Subscribe to our newsletter</h6>
+                <h6 class="text-2xl font-semibold mb-5">Subscribe to our newsletter</h6>
                 <div class="flex">
                     <div>
                         <fieldset class="form-control w-80">
@@ -275,13 +289,18 @@
                         </fieldset>
                     </div>
                     <div>
-                        <button>
-                            <img class="text-white bg-transparent" src="images/icons8-right-arrow-32.png" alt="">
+                        <button class="">
+                            <i
+                                class="fa-solid fa-angle-right text-white text-3xl w-9 h-9 rounded-full bg-gradient-to-r from-[#FF0000] to-[#FF8938]"></i>
+
                         </button>
                     </div>
                 </div>
             </form>
         </footer>
+        <div class="text-center flex items-center justify-center ">
+            <p class="font-medium text-[#494949]">© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
     </div>
 </body>
 
