--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
     <!-- tea grid  -->
     <div class="hero">
-        <div class="hero-content flex-col lg:flex-row gap-12">
+        <div class="hero-content flex-col-reverse lg:flex-row gap-12">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
                 <div class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] h-36 rounded-lg">
                     <!-- gradient  -->
@@ -144,7 +144,7 @@
         </div>
     </div>
     <!-- customer review  -->
-    <div class="hero rounded-xl px-12 py-16 my-24 bg-gradient-to-r from-[#FF0000] to-[#FF8938] max-w-6xl mx-auto ">
+    <div class="hero rounded-xl lg:px-12 py-16 my-24 bg-gradient-to-r from-[#FF0000] to-[#FF8938] max-w-6xl mx-auto ">
         <div class="hero-content flex-col lg:flex-row-reverse gap-12">
             <!-- review cards  -->
             <div class="flex-1 relative pl-24 flex flex-col gap-10">
@@ -161,8 +161,8 @@
                     </div>
                 </div>
                 <!--current review  -->
-                <div class="bg-white rounded-lg px-8 py-10 absolute top-36 -left-5 z-10
-                 max-w-[430px]">
+                <div class="bg-white rounded-lg px-8 py-10 absolute top-36  -left-1 max-w-[200px] lg:-left-5 z-10
+                 lg:max-w-[430px]">
                     <img class="absolute -left-5 -top-5 border-4 border-white rounded-full bg-white"
                         src="images/client.png" alt="">
                     <p class=" text-base font-semibold text-ash-color mb-8">We are providing the best and suitable home
@@ -244,18 +244,18 @@
         </div>
     </div>
     <!-- footer  -->
-    <div class="bg-gradient-to-r from-[#ff000014] to-[#ff88384f]   px-48 py-20 grid grid-rows-3">
-        <div class="flex justify-between items-center max-w-6xl mb-12">
+    <div class="bg-gradient-to-r from-[#ff000014] to-[#ff88384f]   lg:px-48 py-20 grid lg:grid-rows-3 grid-cols-1">
+        <div class="flex flex-col gap-5 lg:flex-row justify-between items-center max-w-6xl mb-12">
             <div class="">
                 <img class="" src="images/cup.png" alt="">
             </div>
-            <div class="flex gap-12 items-center">
+            <div class="flex flex-col lg:flex-row gap-5 lg:gap-12 items-center">
                 <p class="text-2xl">Ready to get strated?</p>
                 <button class=" btn font-bold text-xl bg-gradient-to-r from-[#FF0000] to-[#FF8938] text-white">Get
                     Started</button>
             </div>
         </div>
-        <footer class=" grid lg:grid-cols-4  ">
+        <footer class=" grid lg:grid-cols-4 text-center lg:text-left ">
             <nav class="grid grid-rows-5 gap-3">
                 <h6 class=" text-2xl font-semibold ">Quick Links</h6>
                 <a class="link link-hover">Home</a>
@@ -276,14 +276,13 @@
                 <a class="link link-hover">Privacy policy</a>
 
             </nav>
-            <form>
-
+            <form class="px-5 lg:px-0">
                 <h6 class="text-2xl font-semibold mb-5">Subscribe to our newsletter</h6>
-                <div class="flex">
+                <div class="flex flex-row lg:flex-row items-center gap-12">
                     <div>
-                        <fieldset class="form-control w-80">
+                        <fieldset class="text-center">
                             <label class="label">
-                                <span class="label-text">Enter your email address</span>
+                                <span class="text-center">Enter your email address</span>
                             </label>
                             <input type="email" name="" id="" class="border-b-2  border-ash-color bg-transparent">
                         </fieldset>
@@ -298,7 +297,7 @@
                 </div>
             </form>
         </footer>
-        <div class="text-center flex items-center justify-center ">
+        <div class="text-center flex items-center justify-center lg:mt-0 mt-12">
             <p class="font-medium text-[#494949]">© 2027 UIDesign.to - All rights reserved.</p>
         </div>
     </div>
