--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
         </div>
     </div>
     <!-- events  -->
-    <div class="text-center max-w-6xl mx-auto mb-24">
+    <div class="text-center max-w-6xl mx-auto mb-24 px-3 lg:px-0">
         <h3 class="text-5xl font-bold">News & Events</h3>
         <p class="py-6 text-base font-semibold text-ash-color">There are many variations of passages of Lorem Ipsum
             available, but the majority have suffered alteration in
             some form, by injected humour, or randomised words which don't look even slightly believable. </p>
         <div class="flex lg:flex-row flex-col gap-5">
             <div class="card bg-base-100 border border-slate-200 pt-5 text-left">
-                <figure>
+                <figure class="px-3 lg:px-0">
                     <img src="images/news-1.png" alt="Shoes" />
                 </figure>
                 <div class="card-body">
@@ -218,7 +218,7 @@
                 </div>
             </div>
             <div class="card bg-base-100  border border-slate-200 pt-5 text-left">
-                <figure>
+                <figure class="px-3 lg:px-0">
                     <img src="images/news-2.png" alt="Shoes" />
                 </figure>
                 <div class="card-body">
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="card bg-base-100  border border-slate-200 pt-5 text-left">
-                <figure>
+                <figure class="px-3 lg:px-0">
                     <img src="images/news-3.png" alt="Shoes" />
                 </figure>
                 <div class="card-body">
@@ -255,8 +255,8 @@
                     Started</button>
             </div>
         </div>
-        <footer class=" grid lg:grid-cols-4 text-center lg:text-left ">
-            <nav class="grid grid-rows-5 gap-3">
+        <footer class=" grid lg:grid-cols-4 text-center gap-5 lg:text-left ">
+            <nav class="grid grid-rows-5 lg:gap-3">
                 <h6 class=" text-2xl font-semibold ">Quick Links</h6>
                 <a class="link link-hover">Home</a>
                 <a class="link link-hover">About Us</a>
@@ -297,7 +297,7 @@
                 </div>
             </form>
         </footer>
-        <div class="text-center flex items-center justify-center lg:mt-0 mt-12">
+        <div class="text-center flex items-center justify-center lg:mt-0 mt-16">
             <p class="font-medium text-[#494949]">© 2027 UIDesign.to - All rights reserved.</p>
         </div>
     </div>
